assets/sass/_theme/design-system/meta.sass
@mixin meta-with-labels-table
    &, .taxonomies > ul
        flex-direction: column
        gap: 0
        width: 100%
        > li
            flex: 1
            width: 100%
            display: flex
            gap: $spacing-3
            justify-content: space-between
            padding-top: $spacing-2
            padding-bottom: $spacing-2
            &:not(:first-child)
                border-top: var(--border-width) solid var(--color-border)
            > ul
                text-align: right
            &.taxonomies
                padding-top: 0
                padding-bottom: 0

        .taxonomy-title
            text-align: left

@mixin meta-with-labels-columns
    &, .taxonomies > ul
        align-items: baseline
        flex-direction: row
        gap: var(--grid-gutter)
        > li
            width: columns(2)
            > span
                display: block
                margin-bottom: $spacing-1
            &.taxonomies
                width: 100%
                order: 2

@mixin meta-without-labels-inline
    &, .taxonomies > ul
        gap: $spacing-2 $spacing-3
        > li
            > span
                &:first-of-type
                    @include sr-only

        .authors
            ul
                display: flex
                flex-wrap: wrap
                gap: space()
                li:not(:last-child)
                    span::after
                        display: inline
                        content: ','

    .taxonomies
        ul
            gap: $spacing-1
        .terms
            ul
                display: inline-flex
                flex-wrap: wrap

.single-meta
    &:empty
        display: none

    &, ul
        @include list-reset

    li
        @include meta
        > span:first-of-type
            color: var(--color-text-alt)
        a
            @include link(var(--color-accent))

    .reading-time
        span:first-letter
            text-transform: capitalize

    .taxonomies
        width: 100%

    .social-share
        ul.share
            align-items: center
            flex-direction: row
            a
                @include link(inherit)
                text-decoration: none
            li
                &:first-child
                    a
                        padding-left: 0
                &:last-child
                    a
                        padding-right: 0

    &, .taxonomies > ul
        display: flex
        flex-wrap: wrap

    &.hero-meta
        margin-top: $spacing-3

    &.without-label
        @include meta-without-labels-inline

    &.with-labels
        li > ul
            display: flex
            flex-direction: column
            gap: space()

    @include media-breakpoint-down(desktop)
        &.with-labels
            @include meta-with-labels-table

    @include media-breakpoint-up(desktop)
        // in hero: 6 cols bc of picture
        &.hero-meta
            margin-top: $spacing-4
            width: columns(6)
            &.with-labels
                @include meta-with-labels-columns

    @include in-page-with-sidebar
        // padding before toc separator
        &.without-label
            padding-bottom: $spacing-3
            // vertical alignment for meta in sidebar
            &.content-meta
                flex-direction: column

        &.with-labels
            &.content-meta
                @include meta-with-labels-table

    @include in-page-without-sidebar
        // in full width: display on 10 cols alongside toc
        &.content-meta
            width: columns(10)
            &.with-labels
                @include meta-with-labels-columns

